Deployable Streamlit Separated V0: Modular main.py with auto-ingest and UI

--- a/code.ipynb
+++ b/code.ipynb
@@ -85,6 +85,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created: RAGBot\\app/rag_engine\\document_loader.py\n",
+      "Created: RAGBot\\app/rag_engine\\vectorstore_builder.py\n",
+      "Created: RAGBot\\app/rag_engine\\vectorstore_loader.py\n",
+      "Created: RAGBot\\app/rag_engine\\llm_loader.py\n",
+      "Created: RAGBot\\app/rag_engine\\query_expander.py\n",
+      "Created: RAGBot\\app/rag_engine\\rag_chain_builder.py\n",
+      "Created: RAGBot\\app/rag_engine\\query_processor.py\n",
+      "Created: RAGBot\\app/ui\\streamlit_ui.py\n",
+      "Created: RAGBot\\app/ui\\session_state_manager.py\n",
+      "Created: RAGBot\\app/ui\\document_uploader.py\n",
+      "Created: RAGBot\\app/ui\\log_viewer.py\n",
+      "Created: RAGBot\\app/ui\\chat_handler.py\n",
+      "Created: RAGBot\\app/ui\\metrics_display.py\n",
+      "Directory structure creation complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "def create_directory_structure():\n",
+    "    # Define the base directory\n",
+    "    base_dir = \"RAGBot\"\n",
+    "    os.makedirs(base_dir, exist_ok=True)\n",
+    "\n",
+    "    # Define directories and files to create\n",
+    "    structure = {\n",
+    "        \"app/rag_engine\": [\n",
+    "            \"document_loader.py\",\n",
+    "            \"vectorstore_builder.py\",\n",
+    "            \"vectorstore_loader.py\",\n",
+    "            \"llm_loader.py\",\n",
+    "            \"query_expander.py\",\n",
+    "            \"rag_chain_builder.py\",\n",
+    "            \"query_processor.py\"\n",
+    "        ],\n",
+    "        \"app/ui\": [\n",
+    "            \"streamlit_ui.py\",\n",
+    "            \"session_state_manager.py\",\n",
+    "            \"document_uploader.py\",\n",
+    "            \"log_viewer.py\",\n",
+    "            \"chat_handler.py\",\n",
+    "            \"metrics_display.py\"\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    # Create directories and empty files\n",
+    "    for directory, files in structure.items():\n",
+    "        # Create directory\n",
+    "        dir_path = os.path.join(base_dir, directory)\n",
+    "        os.makedirs(dir_path, exist_ok=True)\n",
+    "\n",
+    "        # Create empty Python files\n",
+    "        for file_name in files:\n",
+    "            file_path = os.path.join(dir_path, file_name)\n",
+    "            if not os.path.exists(file_path):\n",
+    "                with open(file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "                    f.write(\"#!/usr/bin/env python\\n# -*- coding: utf-8 -*-\\n\\n\")\n",
+    "                print(f\"Created: {file_path}\")\n",
+    "            else:\n",
+    "                print(f\"Skipped (already exists): {file_path}\")\n",
+    "\n",
+    "    print(\"Directory structure creation complete.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    create_directory_structure()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
